bies/biesC/grammar/.antlr/biesCParser.java
// Generated from c:/Users/Eddy/Desktop/Proyecto Paradigmas de la Programación/bies/biesC/grammar/biesC.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class biesCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, BOOL=14, TRUE=15, FALSE=16, NULL=17, 
		INPUT=18, INT=19, STR=20, LIST=21, LEN=22, STRING=23, NUMBER=24, PRINT=25, 
		ID=26, MULT=27, DIV=28, ADD=29, SUB=30, POW=31, AND=32, OR=33, EQ=34, 
		NEQ=35, LT=36, GT=37, LE=38, GE=39, NL=40, WS=41, COMMENT=42, MULTILINE_COMMENT=43;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_printInstr = 2, RULE_simpleLetInstr = 3, 
		RULE_anonymousLetFunction = 4, RULE_letInExpr = 5, RULE_declaration = 6, 
		RULE_simpleConstInstr = 7, RULE_anonymousConstFunction = 8, RULE_primarydata = 9, 
		RULE_expr = 10, RULE_functionCall = 11, RULE_number = 12, RULE_string = 13, 
		RULE_array = 14, RULE_id = 15, RULE_predSymbols = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "printInstr", "simpleLetInstr", "anonymousLetFunction", 
			"letInExpr", "declaration", "simpleConstInstr", "anonymousConstFunction", 
			"primarydata", "expr", "functionCall", "number", "string", "array", "id", 
			"predSymbols"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'let'", "'='", "'()'", "'=>'", "','", "'{'", "'}'", 
			"'in'", "'const'", "'['", "']'", "'bool'", "'true'", "'false'", "'null'", 
			"'input'", "'int'", "'str'", "'list'", "'len'", null, null, "'print'", 
			null, "'*'", "'/'", "'+'", "'-'", "'**'", "'&&'", "'||'", "'=='", "'!='", 
			"'<'", "'>'", "'<='", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "BOOL", "TRUE", "FALSE", "NULL", "INPUT", "INT", "STR", "LIST", 
			"LEN", "STRING", "NUMBER", "PRINT", "ID", "MULT", "DIV", "ADD", "SUB", 
			"POW", "AND", "OR", "EQ", "NEQ", "LT", "GT", "LE", "GE", "NL", "WS", 
			"COMMENT", "MULTILINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "biesC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public biesCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(biesCParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(biesCParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(biesCParser.NL, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 109035528L) != 0)) {
				{
				{
				setState(34);
				statement();
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NL) {
					{
					setState(35);
					match(NL);
					}
				}

				}
				}
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(43);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public PrintInstrContext printInstr() {
			return getRuleContext(PrintInstrContext.class,0);
		}
		public SimpleLetInstrContext simpleLetInstr() {
			return getRuleContext(SimpleLetInstrContext.class,0);
		}
		public AnonymousLetFunctionContext anonymousLetFunction() {
			return getRuleContext(AnonymousLetFunctionContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public LetInExprContext letInExpr() {
			return getRuleContext(LetInExprContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(50);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				printInstr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				simpleLetInstr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				anonymousLetFunction();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(48);
				functionCall();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(49);
				letInExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintInstrContext extends ParserRuleContext {
		public PrintInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printInstr; }
	 
		public PrintInstrContext() { }
		public void copyFrom(PrintInstrContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrintInstr_LabelContext extends PrintInstrContext {
		public TerminalNode PRINT() { return getToken(biesCParser.PRINT, 0); }
		public PrimarydataContext primarydata() {
			return getRuleContext(PrimarydataContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PrintInstr_LabelContext(PrintInstrContext ctx) { copyFrom(ctx); }
	}

	public final PrintInstrContext printInstr() throws RecognitionException {
		PrintInstrContext _localctx = new PrintInstrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_printInstr);
		try {
			_localctx = new PrintInstr_LabelContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(PRINT);
			setState(53);
			match(T__0);
			setState(56);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(54);
				primarydata();
				}
				break;
			case 2:
				{
				setState(55);
				expr(0);
				}
				break;
			}
			setState(58);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleLetInstrContext extends ParserRuleContext {
		public SimpleLetInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleLetInstr; }
	 
		public SimpleLetInstrContext() { }
		public void copyFrom(SimpleLetInstrContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleLetInstr_LabelContext extends SimpleLetInstrContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(biesCParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(biesCParser.WS, i);
		}
		public SimpleLetInstr_LabelContext(SimpleLetInstrContext ctx) { copyFrom(ctx); }
	}

	public final SimpleLetInstrContext simpleLetInstr() throws RecognitionException {
		SimpleLetInstrContext _localctx = new SimpleLetInstrContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_simpleLetInstr);
		int _la;
		try {
			_localctx = new SimpleLetInstr_LabelContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__2);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(61);
				match(WS);
				}
			}

			setState(64);
			id();
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(65);
				match(WS);
				}
			}

			setState(68);
			match(T__3);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(69);
				match(WS);
				}
			}

			setState(72);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnonymousLetFunctionContext extends ParserRuleContext {
		public AnonymousLetFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anonymousLetFunction; }
	 
		public AnonymousLetFunctionContext() { }
		public void copyFrom(AnonymousLetFunctionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LambdaNoParams_LabelContext extends AnonymousLetFunctionContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(biesCParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(biesCParser.WS, i);
		}
		public LambdaNoParams_LabelContext(AnonymousLetFunctionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LambdaWithParams_LabelContext extends AnonymousLetFunctionContext {
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(biesCParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(biesCParser.WS, i);
		}
		public LambdaWithParams_LabelContext(AnonymousLetFunctionContext ctx) { copyFrom(ctx); }
	}

	public final AnonymousLetFunctionContext anonymousLetFunction() throws RecognitionException {
		AnonymousLetFunctionContext _localctx = new AnonymousLetFunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_anonymousLetFunction);
		int _la;
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				_localctx = new LambdaNoParams_LabelContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(T__2);
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(75);
					match(WS);
					}
				}

				setState(78);
				id();
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(79);
					match(WS);
					}
				}

				setState(82);
				match(T__3);
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(83);
					match(WS);
					}
				}

				setState(86);
				match(T__4);
				setState(87);
				match(T__5);
				setState(90);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(88);
					statement();
					}
					break;
				case 2:
					{
					setState(89);
					expr(0);
					}
					break;
				}
				}
				break;
			case 2:
				_localctx = new LambdaWithParams_LabelContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				match(T__2);
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(93);
					match(WS);
					}
				}

				setState(96);
				id();
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(97);
					match(WS);
					}
				}

				setState(100);
				match(T__3);
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(101);
					match(WS);
					}
				}

				setState(104);
				match(T__0);
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(105);
					id();
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__6) {
						{
						{
						setState(106);
						match(T__6);
						setState(107);
						id();
						}
						}
						setState(112);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(115);
				match(T__1);
				setState(116);
				match(T__5);
				setState(119);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
				case 1:
					{
					setState(117);
					statement();
					}
					break;
				case 2:
					{
					setState(118);
					expr(0);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LetInExprContext extends ParserRuleContext {
		public LetInExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letInExpr; }
	 
		public LetInExprContext() { }
		public void copyFrom(LetInExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LetInExpr_LabelContext extends LetInExprContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(biesCParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(biesCParser.NL, i);
		}
		public List<TerminalNode> WS() { return getTokens(biesCParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(biesCParser.WS, i);
		}
		public LetInExpr_LabelContext(LetInExprContext ctx) { copyFrom(ctx); }
	}

	public final LetInExprContext letInExpr() throws RecognitionException {
		LetInExprContext _localctx = new LetInExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_letInExpr);
		int _la;
		try {
			_localctx = new LetInExpr_LabelContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(T__2);
			setState(124);
			match(T__7);
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2 || _la==T__10) {
				{
				{
				setState(125);
				declaration();
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL || _la==WS) {
					{
					{
					setState(126);
					_la = _input.LA(1);
					if ( !(_la==NL || _la==WS) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(137);
			match(T__8);
			setState(138);
			match(T__9);
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,22,_ctx) ) {
			case 1:
				{
				setState(139);
				match(T__7);
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 109035528L) != 0)) {
					{
					{
					setState(140);
					statement();
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NL || _la==WS) {
						{
						{
						setState(141);
						_la = _input.LA(1);
						if ( !(_la==NL || _la==WS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						}
						setState(146);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(152);
				match(T__8);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public SimpleLetInstrContext simpleLetInstr() {
			return getRuleContext(SimpleLetInstrContext.class,0);
		}
		public SimpleConstInstrContext simpleConstInstr() {
			return getRuleContext(SimpleConstInstrContext.class,0);
		}
		public AnonymousConstFunctionContext anonymousConstFunction() {
			return getRuleContext(AnonymousConstFunctionContext.class,0);
		}
		public AnonymousLetFunctionContext anonymousLetFunction() {
			return getRuleContext(AnonymousLetFunctionContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaration);
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,23,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				simpleLetInstr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				simpleConstInstr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(157);
				anonymousConstFunction();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(158);
				anonymousLetFunction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleConstInstrContext extends ParserRuleContext {
		public SimpleConstInstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleConstInstr; }
	 
		public SimpleConstInstrContext() { }
		public void copyFrom(SimpleConstInstrContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleConstInstr_LabelContext extends SimpleConstInstrContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(biesCParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(biesCParser.WS, i);
		}
		public SimpleConstInstr_LabelContext(SimpleConstInstrContext ctx) { copyFrom(ctx); }
	}

	public final SimpleConstInstrContext simpleConstInstr() throws RecognitionException {
		SimpleConstInstrContext _localctx = new SimpleConstInstrContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_simpleConstInstr);
		int _la;
		try {
			_localctx = new SimpleConstInstr_LabelContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(T__10);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(162);
				match(WS);
				}
			}

			setState(165);
			id();
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(166);
				match(WS);
				}
			}

			setState(169);
			match(T__3);
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(170);
				match(WS);
				}
			}

			setState(173);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnonymousConstFunctionContext extends ParserRuleContext {
		public AnonymousConstFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anonymousConstFunction; }
	 
		public AnonymousConstFunctionContext() { }
		public void copyFrom(AnonymousConstFunctionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LambdaConstWithParams_LabelContext extends AnonymousConstFunctionContext {
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(biesCParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(biesCParser.WS, i);
		}
		public LambdaConstWithParams_LabelContext(AnonymousConstFunctionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LambdaConstNoParams_LabelContext extends AnonymousConstFunctionContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(biesCParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(biesCParser.WS, i);
		}
		public LambdaConstNoParams_LabelContext(AnonymousConstFunctionContext ctx) { copyFrom(ctx); }
	}

	public final AnonymousConstFunctionContext anonymousConstFunction() throws RecognitionException {
		AnonymousConstFunctionContext _localctx = new AnonymousConstFunctionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_anonymousConstFunction);
		int _la;
		try {
			setState(222);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,37,_ctx) ) {
			case 1:
				_localctx = new LambdaConstNoParams_LabelContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				match(T__10);
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(176);
					match(WS);
					}
				}

				setState(179);
				id();
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(180);
					match(WS);
					}
				}

				setState(183);
				match(T__3);
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(184);
					match(WS);
					}
				}

				setState(187);
				match(T__4);
				setState(188);
				match(T__5);
				setState(191);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,30,_ctx) ) {
				case 1:
					{
					setState(189);
					statement();
					}
					break;
				case 2:
					{
					setState(190);
					expr(0);
					}
					break;
				}
				}
				break;
			case 2:
				_localctx = new LambdaConstWithParams_LabelContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(193);
				match(T__10);
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(194);
					match(WS);
					}
				}

				setState(197);
				id();
				setState(199);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(198);
					match(WS);
					}
				}

				setState(201);
				match(T__3);
				setState(203);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(202);
					match(WS);
					}
				}

				setState(205);
				match(T__0);
				setState(214);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(206);
					id();
					setState(211);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__6) {
						{
						{
						setState(207);
						match(T__6);
						setState(208);
						id();
						}
						}
						setState(213);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(216);
				match(T__1);
				setState(217);
				match(T__5);
				setState(220);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,36,_ctx) ) {
				case 1:
					{
					setState(218);
					statement();
					}
					break;
				case 2:
					{
					setState(219);
					expr(0);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
